# scheduler

./: .env.example  Dockerfile  README.md  alembic\env.py  alembic\script.py.mako  app\__init__.py  app\config.py  app\database.py  app\main.py  app\models\contribution.py  app\models\node.py  app\models\task.py  app\models\user.py  app\routers\admin.py  app\routers\auth.py  app\routers\node.py  app\routers\task.py  app\schemas\auth.py  app\schemas\contribution.py  app\schemas\node.py  app\schemas\task.py  app\services\background_tasks.py  app\services\contribution_service.py  app\utils\minio_client.py  app\utils\redis_client.py  app\utils\security.py  docker-compose.yml  pyproject.toml  requirements.txt  test_aggregation.py  tests\conftest.py  tests\test_auth.py  tests\test_nodes.py  tests\test_tasks.py
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: tasks.py
app/core/: config.py
app/models/: aggregation.py  task.py
app/routers/: aggregation.py  node.py
app/services/: aggregation_service.py  background_tasks.py
app/utils/: minio_client.py
