[tool.poetry]
name = "firefly-scheduler"
version = "0.1.0"
description = "萤火虫大模型分布式志愿算力调度中心"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
redis = "^5.0.0"
minio = "^7.2.0"
alembic = "^1.13.0"
python-multipart = "^0.0.7"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
